# DeepSeekOCR-Cli

./: .bandit  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXPLORATORY_TESTING_PLAN.md  HYBRID_SEARCH.md  KNOWN_ISSUES.md  Makefile  PRD.md  README.md  app.py  deepseek_ocr_mac.py  hybrid_search.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh  visual_index.py
.github/workflows/: ci.yml
examples/: .keep
tests/: __init__.py  fixtures.py  test_extensions.py  test_hybrid_search.py  test_integration.py  test_unit.py
